force-app/main/default/objects/BuxOut__c/BuxOut__c.object-meta.xml
<CustomObject>
    <label>BuxOut</label>
    <nameField>
        <displayFormat>OUT-{0000}</displayFormat>
        <label>BuxOut Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuxOuts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>