force-app/main/default/objects/BuxOut__c/fields/LifeOrDeath__c.field-meta.xml
<CustomField>
    <fullName>LifeOrDeath__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Dude, It&#39;s Life Or Death</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>