force-app/main/default/objects/BuxOut__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>