force-app/main/default/objects/BuxOut__c/fields/YOLO__c.field-meta.xml
<CustomField>
    <fullName>YOLO__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Dude, You Only Live Once</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>