force-app/main/default/objects/BuxOut__c/listViews/Bux_Out_List_View.listView-meta.xml
<ListView>
    <fullName>Bux_Out_List_View</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>LifeOrDeath__c</columns>
    <columns>YOLO__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Mine</filterScope>
    <label>Bux Out List View</label>
</ListView>